--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,13 @@ body {
 
 .form__number {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   justify-content: space-between;
+}
+
+.form__number--complex {
+  flex-direction: row;
 }
 
 .form__number svg {
@@ -241,4 +246,8 @@ body {
   position: absolute;
   right: -20px;
   bottom: 30px;
+}
+
+.form__real-part .form__label {
+  min-width: 250px;
 }
