--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   font-family: 'Exo 2';
   font-size: 20px;
   color: var(--color-light);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 svg {
